--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Alex Smith</div>
+          <div class="mobile-site-title">Dennis Pitallano</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -110,10 +110,11 @@
             <section class="pt-page pt-page-1 section-without-bg section-paddings-0 table" data-id="home">
               <div class="section-inner">
                 <div class="home-page-block">
-                  <h2>Alex Smith</h2>
+                  <h2>Dennis Pitallano</h2>
                   <div class="owl-carousel text-rotation">                                    
                     <div class="item">
                       <p class="home-page-description">Web Designer</p>
+                      <p class="home-page-description">Web/System Developer</p>
                     </div>
                     <div class="item">
                       <p class="home-page-description">Frontend-developer</p>
