--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
     <script src="js/main.js"></script>
 
     <!-- Demo Color changer Script -->
-    <!--<script src="preview/lmpixels-demo-panel.js"></script> -->
+    <script src="preview/lmpixels-demo-panel.js"></script>
     <!-- /Demo Color changer Script -->
   </body>
 
