--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="section-title-block">
                   <div class="section-title-wrapper clearfix">
                     <h2 class="section-title">About Me</h2>
-                    <h5 class="section-description">Artist, Thinker, Creative Doer</h5>
+                    <h5 class="section-description">Coder, Thinker, Creative Doer</h5>
                   </div>
                 </div>
 
@@ -144,19 +144,21 @@
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-4">
-                    <h3>I am Web Designer @ Company.com</h3>
-                    <p>Praesent ut tortor consectetur, semper sapien non, lacinia augue. Aenean arcu libero, facilisis et nisi non, tempus faucibus tortor. Mauris vel nulla aliquam, pellentesque enim ac, faucibus tortor. Nulla odio nibh, cursus sit amet urna id, dignissim euismod augue.</p>
-                    <p>Duis sollicitudin, libero porttitor rutrum ultrices, turpis lorem fermentum justo, quis ornare augue tortor non est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                    <h3>I am Software Developer @ bss.com</h3>
+                    <p>Currently work as Software Developer building in-house software focusing in Financial Management.</p>
+                    <p>With over six (6) years of professional experience working as a Software Developer specializing mainly on Web apps using Microsoft technologies.
+                       My exploration into programming also includes; VB6, C, C++, JAVA, PHP, Angular, Action Scripts and a variety of other equally obscure acronyms.
+                       I have worked on Web Apps + Client-side technologies + Mobile Apps + Micro-services + REST APIs + Event Communication + Databases + Cloud + Containers , which go together like coffee crumble ice cream.</p>
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-4 subpage-block">
                     <ul class="info-list">
-                      <li><span class="title">Age</span><span class="value">29</span></li>
-                      <li><span class="title">Residence</span><span class="value">USA</span></li>
-                      <li><span class="title">Address</span><span class="value">88 Some Street, Some Town</span></li>
-                      <li><span class="title">e-mail</span><span class="value"><a href="mailto:email@example.com">email@example.com</a></span></li>
-                      <li><span class="title">Phone</span><span class="value">+0123 123 456 789</span></li>
-                      <li><span class="title">Skype</span><span class="value">alex.smith</span></li>
+                      <li><span class="title">Age</span><span class="value">Nevrmind</span></li>
+                      <li><span class="title">Residence</span><span class="value">Ph</span></li>
+                      <li><span class="title">Address</span><span class="value">Ask me.</span></li>
+                      <li><span class="title">e-mail</span><span class="value"><a href="mailto:dpitallano@gmail.com">dpitallano@gmail.com</a></span></li>
+                      <li><span class="title">Phone</span><span class="value">+63 917 497 7221</span></li>
+                      <li><span class="title">Skype</span><span class="value">dennis.pitallano</span></li>
                       <li><span class="title">Freelance</span><span class="value available">Available</span></li>
                     </ul>
 
@@ -182,8 +184,8 @@
                     <div class="service-block"> 
                       <div class="service-info">
                         <img src="images/service/web_design_icon.png" alt="Responsive Design">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <h4>Web App/Design Development</h4>
+                        <p>Let's talk.</p>
                       </div>
                     </div>
                   </div>
@@ -193,7 +195,7 @@
                       <div class="service-info">
                         <img src="images/service/photography_icon.png" alt="Photography">
                         <h4>Photography</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <p>I know someone who can.</p>
                       </div>
                     </div>
                   </div>
@@ -203,7 +205,7 @@
                       <div class="service-info">
                         <img src="images/service/creativity_icon.png" alt="Creativity">
                         <h4>Creativity</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <p>Hire me at your own risk.</p>
                       </div>
                     </div>
                   </div>
@@ -213,7 +215,7 @@
                       <div class="service-info">
                         <img src="images/service/advetising_icon.png" alt="Advetising">
                         <h4>Advetising</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                        <p>I'm not a good marketer, but I can help 😁.</p>
                       </div>
                     </div>
                   </div>
@@ -825,7 +827,7 @@
 
     <!-- Demo Color changer -->
    <a id="lm_demo_panel_switcher" class="lm-demo-panel-switcher right"><i class="fa fa-gear"></i></a>
-    <div id="lm_demo_panel" class="lm-demo-panel right panel-color-red active">
+    <!-- <div id="lm_demo_panel" class="lm-demo-panel right panel-color-red active">
       <div class="demo-panel-title">Template Style</div>
       <div id="t_style" class="demo-panel-options">
         <a class="current-t-style t-style-switcher" data-id="template-style-light"><div class="preview w-border t-style t-style-light">Light</div></a>
@@ -855,7 +857,7 @@
         <a class="layout-switcher" data-id="layout-menu-top"><div class="preview layout top">Top</div></a>
         <a class="layout-switcher" data-id="layout-menu-bottom"><div class="preview layout bottom">Bottom</div></a>
       </div>
-    </div>
+    </div>-->
     <!-- /Demo Color changer -->
 
     <script src="js/bootstrap.min.js"></script>
